--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pregnancy Planning Flip</title>
+    <title>Game Planning Flip</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Pregnancy Planning Flip</h1>
-        <p>Welcome to the Pregnancy Planning Flip tool! This interactive tool helps you make decisions using a simulated coin flip.</p>
+        <h1>Game Planning Flip</h1>
+        <p>Welcome to the Game Planning Flip tool! This interactive tool helps you make decisions using a simulated coin flip.</p>
                
         <div id="input-section">
             <label for="numAttempts">Enter the number of attempts (odd number only):</label>
@@ -23,7 +23,7 @@
                 <h2>Results:</h2>
                 <p id="flip-result"></p>
                 <p id="summary"></p>
-                <p id="pregnancy-suggestion"></p>
+                <p id="Game-suggestion"></p>
                 <pre id="flip-logs"></pre>
                 <h3>Flip Distribution:</h3>
             </div>
