--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Pregnancy Planning Flip</title>
+    <title>About Game Planning Flip</title>
     <link rel="stylesheet" href="styles copy.css">
 </head>
 <body>
     <div class="container">
-        <h1>About Pregnancy Planning Flip</h1>
-        <p>Welcome to the <strong>Pregnancy Planning Flip</strong> tool! This tool is designed to assist couples in making decisions regarding pregnancy using a simulated coin flip mechanism. Here’s how it works:</p>
+        <h1>About Game Planning Flip</h1>
+        <p>Welcome to the <strong>Game Planning Flip</strong> tool! This tool is designed to assist couples in making decisions regarding Game using a simulated coin flip mechanism. Here’s how it works:</p>
         
         <h2>How It Works</h2>
         <ol>
@@ -17,12 +17,12 @@
             <li><strong>Simulated Coin Flips:</strong> The tool uses multiple methods to simulate a coin flip, including basic randomness, weighted choices, and aggregated results to ensure fair and balanced outcomes.</li>
             <li><strong>Generate Results:</strong> Based on the number of attempts, the tool performs a series of flips and determines the result by evaluating the most frequent outcome.</li>
             <li><strong>Display Results:</strong> The result of the coin flip is shown along with a summary of the attempts, matches, and mismatches.</li>
-            <li><strong>Pregnancy Suggestion:</strong> The tool suggests whether it might be a good time for pregnancy based on whether the number of matches (where user choices align with the coin flip result) exceeds mismatches.</li>
+            <li><strong>Game Suggestion:</strong> The tool suggests whether it might be a good time for Game based on whether the number of matches (where user choices align with the coin flip result) exceeds mismatches.</li>
             <li><strong>Visual Representation:</strong> A pie chart displays the distribution of Heads vs. Tails across all attempts for easy visual analysis.</li>
         </ol>
 
         <h2>Why Use This Tool?</h2>
-        <p>This tool provides an interactive and fun way to assist in decision-making. By using randomness in a controlled manner, it offers an engaging approach to exploring choices and understanding probabilities. It’s a great way for couples to make light-hearted decisions and gain insights into the timing of pregnancy planning.</p>
+        <p>This tool provides an interactive and fun way to assist in decision-making. By using randomness in a controlled manner, it offers an engaging approach to exploring choices and understanding probabilities. It’s a great way for couples to make light-hearted decisions and gain insights into the timing of Game planning.</p>
         
         <h2>Contact Us</h2>
         <p>If you have any questions or feedback, feel free to reach out to us at <a href="mailto:info@example.com">info@example.com</a>.</p>
